updated number of recommendations

--- a/movieRecommendation.ipynb
+++ b/movieRecommendation.ipynb
@@ -2652,7 +2652,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarity = cosine_similarity(vector)"
+    "similarity = cosine_similarity(vector)\n",
+    "\n",
+    "#from scipy.spatial.distance import squareform, pdist; \n",
+    "# similarity = squareform(pdist(vector, metric='euclidean'))\n",
+    "\n",
+    "#from scipy.spatial.distance import squareform, pdist; \n",
+    "# similarity = squareform(pdist(vector, metric='cityblock'))\n",
+    "\n"
    ]
   },
   {
